// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`doGenerate > no additional formats > should work when no additional formats are returned 1`] = `
{
  "durationInSeconds": 2.479,
  "language": "eng",
  "response": {
    "body": {
      "language_code": "eng",
      "language_probability": 0.8905608654022217,
      "text": "Hello from the Vercel AI SDK.",
      "transcription_id": "dRgXxwt3SzzliHA3nDAQ",
      "words": [
        {
          "end": 0.479,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 0.199,
          "text": "Hello",
          "type": "word",
        },
        {
          "end": 0.499,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 0.479,
          "text": " ",
          "type": "spacing",
        },
        {
          "end": 0.639,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 0.5,
          "text": "from",
          "type": "word",
        },
        {
          "end": 0.66,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 0.639,
          "text": " ",
          "type": "spacing",
        },
        {
          "end": 0.759,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 0.66,
          "text": "the",
          "type": "word",
        },
        {
          "end": 0.759,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 0.759,
          "text": " ",
          "type": "spacing",
        },
        {
          "end": 1.12,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 0.759,
          "text": "Vercel",
          "type": "word",
        },
        {
          "end": 1.2,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 1.12,
          "text": " ",
          "type": "spacing",
        },
        {
          "end": 1.519,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 1.2,
          "text": "AI",
          "type": "word",
        },
        {
          "end": 1.58,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 1.519,
          "text": " ",
          "type": "spacing",
        },
        {
          "end": 2.479,
          "logprob": 0,
          "speaker_id": "speaker_0",
          "start": 1.58,
          "text": "SDK.",
          "type": "word",
        },
      ],
    },
    "headers": {
      "content-length": "1167",
      "content-type": "application/json",
    },
    "modelId": "scribe_v1",
    "timestamp": 1970-01-01T00:00:00.000Z,
  },
  "segments": [
    {
      "endSecond": 0.479,
      "startSecond": 0.199,
      "text": "Hello",
    },
    {
      "endSecond": 0.499,
      "startSecond": 0.479,
      "text": " ",
    },
    {
      "endSecond": 0.639,
      "startSecond": 0.5,
      "text": "from",
    },
    {
      "endSecond": 0.66,
      "startSecond": 0.639,
      "text": " ",
    },
    {
      "endSecond": 0.759,
      "startSecond": 0.66,
      "text": "the",
    },
    {
      "endSecond": 0.759,
      "startSecond": 0.759,
      "text": " ",
    },
    {
      "endSecond": 1.12,
      "startSecond": 0.759,
      "text": "Vercel",
    },
    {
      "endSecond": 1.2,
      "startSecond": 1.12,
      "text": " ",
    },
    {
      "endSecond": 1.519,
      "startSecond": 1.2,
      "text": "AI",
    },
    {
      "endSecond": 1.58,
      "startSecond": 1.519,
      "text": " ",
    },
    {
      "endSecond": 2.479,
      "startSecond": 1.58,
      "text": "SDK.",
    },
  ],
  "text": "Hello from the Vercel AI SDK.",
  "warnings": [],
}
`;

exports[`doGenerate > response headers > should include response data with timestamp, modelId and headers 1`] = `
{
  "body": {
    "language_code": "eng",
    "language_probability": 0.8905608654022217,
    "text": "Hello from the Vercel AI SDK.",
    "transcription_id": "dRgXxwt3SzzliHA3nDAQ",
    "words": [
      {
        "end": 0.479,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 0.199,
        "text": "Hello",
        "type": "word",
      },
      {
        "end": 0.499,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 0.479,
        "text": " ",
        "type": "spacing",
      },
      {
        "end": 0.639,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 0.5,
        "text": "from",
        "type": "word",
      },
      {
        "end": 0.66,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 0.639,
        "text": " ",
        "type": "spacing",
      },
      {
        "end": 0.759,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 0.66,
        "text": "the",
        "type": "word",
      },
      {
        "end": 0.759,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 0.759,
        "text": " ",
        "type": "spacing",
      },
      {
        "end": 1.12,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 0.759,
        "text": "Vercel",
        "type": "word",
      },
      {
        "end": 1.2,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 1.12,
        "text": " ",
        "type": "spacing",
      },
      {
        "end": 1.519,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 1.2,
        "text": "AI",
        "type": "word",
      },
      {
        "end": 1.58,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 1.519,
        "text": " ",
        "type": "spacing",
      },
      {
        "end": 2.479,
        "logprob": 0,
        "speaker_id": "speaker_0",
        "start": 1.58,
        "text": "SDK.",
        "type": "word",
      },
    ],
  },
  "headers": {
    "content-length": "1167",
    "content-type": "application/json",
    "x-ratelimit-remaining": "123",
    "x-request-id": "test-request-id",
  },
  "modelId": "scribe_v1",
  "timestamp": 1970-01-01T00:00:00.000Z,
}
`;
